--- a/src/Components/header/header.css
+++ b/src/Components/header/header.css
@@ -7,9 +7,11 @@
     position: sticky;
     top:0;
     z-index: 100;
+    background-color: white;
 }
 .header-right{
     width: 10%;
+    display: flex;
 }
 .header img{
 height: 25px;
