--- a/src/Components/sidebar/sidebar.css
+++ b/src/Components/sidebar/sidebar.css
@@ -1,10 +1,13 @@
 .sidebar{
-    flex:0.2;
+    width: 20%;
+    float: left;
 }
 .sidebarRow{
     padding: 10px 20px;
     display: flex;
     align-items: center;
+    text-decoration: none;
+    color: #030303;
     
 }
 .sidebarRow:hover{
