--- a/src/Components/header/header.css
+++ b/src/Components/header/header.css
@@ -7,7 +7,7 @@
     position: sticky;
     top:0;
     z-index: 100;
-    background-color: white;
+    background-color:#FFFFFF;
 }
 .header-right{
     width: 10%;
