--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,14 @@
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
-.underHeader{
+.App {
   display: flex;
+  flex-direction: column;
+}
+.underHeader {
+  display: flex;
+  flex-direction: row;
 }
